Working on Adding Plan
